<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>sick_lms400</name>
  <version>0.0.1</version>
  <description>A library for accessing the SICK LMS400 laser sensor.</description>
  <maintainer email="rusu@cs.tum.edu">Radu Bogdan Rusu, Dejan Pangercic</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>

